<resources>
    <string name="app_name">UKMku</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>

    <string-array name="list_status">
        <item>Pilih Status</item>
        <item>OWNER</item>
        <item>INVESTOR</item>
    </string-array>

    <string-array name="list_educations">
        <item>Pilih pendidikan</item>
    </string-array>

    <string-array name="list_gender">
        <item>Jenis Kelamin</item>
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="list_salary">
        <item>Sumber Penghasilan</item>
        <item>Orang Tua</item>
        <item>Pekerjaan</item>
        <item>Dana Pensiunan</item>
    </string-array>

    <string-array name="list_marriage">
        <item>Status Pernikahan</item>
        <item>Menikah</item>
        <item>Lajang</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="investor">Investor</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="no_identitas">No. Identitas</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="data_diri_investor">Data Diri Investor</string>
    <string name="selesai">Selesai</string>
    <string name="data_pekerjaan_keuangan"><![CDATA[Data Pekerjaan & Keuangan]]></string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="pemilik_usaha">Pemilik Usaha</string>
    <string name="data_usaha">Data Usaha</string>
    <string name="npwp">NPWP</string>
    <string name="alamat_usaha">Alamat Usaha</string>
    <string name="rt">RT</string>
    <string name="negara_lahir">Negara Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="agama">Agama</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_ponsel">Nomor Ponsel</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="rw">RW</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="provinsi">Provinsi</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="no_telpon_kantor">No. Telpon Kantor</string>
    <string name="jenis_usaha">Jenis Usaha</string>
    <string name="nama_direktur">Nama Direktur</string>
    <string name="tanggal_lahir_dd_mm_yyyy">Tanggal Lahir (DD-MM-YYYY)</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="pelatihan">Pelatihan</string>
    <string name="keuangan">Keuangan</string>
    <string name="cari_produk">Cari Produk</string>
    <string name="produk">Produk</string>
    <string name="bantuan">Bantuan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="laporan_laba">Laporan Laba</string>
    <string name="modal_usaha">Modal Usaha</string>
    <string name="masukkan_laba_untung_rugi">Masukkan Laba Untung/Rugi</string>
    <string name="modal_anda_saat_ini">Modal Anda Saat Ini</string>
    <string name="tarik">Tarik</string>
    <string name="putar">Putar</string>
    <string name="total_modal_anda_saat_ini">Total Modal Anda Saat Ini</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="laba_anda_bulan_ini">Laba Anda Bulan Ini</string>
    <string name="anda_belum_melaporkan_laba_bulan_ini">Anda Belum Melaporkan Laba Bulan Ini</string>
    <string name="total_laba_anda_bulan_ini">Total Laba Anda Bulan Ini</string>
    <string name="unggah">Unggah</string>
    <string name="halo">Halo</string>
    <string name="laba_usaha">Laba Usaha</string>
    <string name="keluar">Keluar</string>
    <string name="ntp">NTP</string>
    <string name="tanggal_berdiri">Tanggal Berdiri</string>
    <string name="no_telepon">No Telepon</string>
    <string name="ubah">Ubah</string>
    <string name="tambah_rekening">Tambah Rekening</string>
    <string name="profil_investor">Profil Investor</string>
    <string name="profil_pemilik_usaha">Profil Pemilik Usaha</string>
    <string name="data_diri">Data Diri</string>
    <string name="nomor_identitas">Nomor Identitas</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="penghasilan">Penghasilan</string>
    <string name="sumber_penghasilan">Sumber Penghasilan</string>
    <string name="status_pernikahan">Status Pernikahan</string>
    <string name="transaksi">Transaksi</string>
    <string name="jual">Jual</string>
    <string name="beli">Beli</string>
    <string name="rekening_bank">Rekening Bank</string>
    <string name="no_order">No Order</string>
    <string name="properti">Properti</string>
    <string name="nilai_order">Nilai Order</string>
    <string name="pembelian_berhasil">Pembelian Berhasil</string>
    <string name="nilai_tabungan_akhir">Nilai Tabungan Akhir</string>
    <string name="penjualan_berhasil">Penjualan Berhasil</string>
    <string name="portofolio">Portofolio</string>
    <string name="total_nilai_tabungan">Total Nilai Tabungan</string>
    <string name="total_nilai_keuntungan">Total Nilai Keuntungan</string>
    <string name="anda_tidak_memiliki_portofolio">Anda Tidak Memiliki Portofolio</string>
    <string name="manajer_investasi">Manajer Investasi</string>
    <string name="harga_tabungan_semula">Harga Tabungan Semula</string>
    <string name="harga_unit">Harga Unit</string>
    <string name="akan_segera_di_transfer_dalam_2x24_jam">Akan Segera Di Transfer dalam 2x24 Jam</string>
    <string name="keuntungan">Keuntungan</string>
    <string name="nab">NAB</string>
    <string name="barometer">Barometer</string>
    <string name="berita">Berita</string>
    <string name="bank_kustodian">Bank Kustodian</string>
    <string name="riwayat_keuntungan">Riwayat Keuntungan</string>
    <string name="_6_bulan">6 Bulan</string>
    <string name="_1_tahun">1 Tahun</string>
    <string name="_3_tahun">3 Tahun</string>
    <string name="_5_tahun">5 Tahun</string>
    <string name="grafik_harga_per_unit">Grafik Harga per Unit</string>
    <string name="per_unit">per Unit</string>
    <string name="min_pembelian">Minimal Pembelian</string>
    <string name="biaya_pembelian">Biaya Pembelian</string>
    <string name="jumlah_pembelian">Jumlah Pembelian</string>
    <string name="_100_000">100.000</string>
    <string name="_250_000">250.000</string>
    <string name="_500_000">500.000</string>
    <string name="batal">Batal</string>
    <string name="_10_juta_tahun"><![CDATA[<10 juta/tahun]]></string>
</resources>
