<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:padding="30dp"
    tools:context=".activity.investor.InvestorRegister2Activity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="43sp"
            android:layout_height="43sp"
            android:layout_alignLeft="@id/tv_investor"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_arrow_back_black_24dp"></ImageButton>

        <TextView
            android:id="@+id/tv_investor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/investor"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ll_top"
        android:layout_below="@id/rl_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_profile_investor"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:paddingLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/data_diri_investor"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:textSize="22sp"
                android:background="@color/colorDarkBlue"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_nation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_profile_investor"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kewarganegaraan"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_identity_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_nation">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_identitas"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_born_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_identity_number">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tempat_lahir"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_born_nation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_born_place">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/negara_lahir"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_born_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_born_nation">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal_lahir_dd_mm_yyyy"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_born_date"
                android:layout_marginTop="10dp"
                android:entries="@array/list_gender" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_gender">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agama"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_religion">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_address">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_ponsel"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_investor_work_money"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:layout_below="@id/edt_phone"
                android:text="@string/data_pekerjaan_keuangan"
                android:background="@color/colorDarkBlue"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_investor_work_money"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pendidikan"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_education">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pekerjaan"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_work">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pendapatan"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/sp_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_salary"
                android:layout_marginTop="10dp"
                android:entries="@array/list_salary" />

            <Spinner
                android:id="@+id/sp_marriage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_salary"
                android:layout_marginTop="10dp"
                android:entries="@array/list_marriage" />


        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_blue"
            android:text="@string/selesai"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>