<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/colorWhite"
    tools:context=".fragment.owner.OwnerFinanceFragment">

    <LinearLayout
        android:id="@+id/ll_total_modal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_gray"
        android:padding="30dp" >

        <TextView
            android:id="@+id/tv_modal_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/total_modal_anda_saat_ini" />

        <TextView
            android:id="@+id/tv_modal_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="Rp. 10.101.000"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_modal_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_blue"
            android:text="@string/selengkapnya"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_total_modal"
        android:background="@drawable/bg_button_gray"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="30dp" >

        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:text="@string/anda_belum_melaporkan_laba_bulan_ini" />

        <TextView
            android:id="@+id/tv_profit_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/total_laba_anda_bulan_ini"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_profit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="Rp. 10.101.000"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_upload_profit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_blue"
            android:text="@string/unggah"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>